文字跑马灯效果 1.textview要是只setselect(true); 2.listview上focuable（true） 3.textview上面不要设置focusable(true);

--- a/liuyao/src/main/res/layout/hexagram_list_activity.xml
+++ b/liuyao/src/main/res/layout/hexagram_list_activity.xml
@@ -17,6 +17,8 @@
         swipe:swipeCloseAllItemsWhenMoveList="true"
         swipe:swipeOpenOnLongPress="false"
         swipe:swipeAnimationTime="0"
-        swipe:swipeOffsetRight="180dp" />
+        swipe:swipeOffsetRight="180dp"
+        android:focusable="true"
+        />
 
 </LinearLayout>
