--- a/liuyao/src/main/res/menu/menu_main.xml
+++ b/liuyao/src/main/res/menu/menu_main.xml
@@ -1,5 +1,11 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<?xml version="1.0" encoding="utf-8"?>
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/menuSearch"
+        android:icon="@android:drawable/ic_menu_search"
+        android:title=""
+        android:showAsAction="always"
+        android:actionViewClass="android.widget.SearchView"
+        />
     <item android:id="@+id/menuAdd" android:title="新增记录"
-        android:orderInCategory="100" app:showAsAction="never" />
+        android:orderInCategory="100" android:showAsAction="never" />
 </menu>
