--- a/liuyao/src/main/res/layout/hexagram_list_item.xml
+++ b/liuyao/src/main/res/layout/hexagram_list_item.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:background="#fff">
 
-    <RelativeLayout android:gravity="center_vertical|left"
+    <RelativeLayout android:gravity="center_vertical|right"
         android:id="@+id/back"
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -14,14 +14,15 @@
 
         <TextView
             android:textColor="#fff"
-            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:padding="10dp"
             android:textSize="16dp"
             android:background="@drawable/button_flatten"
             android:id="@+id/btnAnalyze"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="分析" />
+            android:text="分析"
+            android:layout_toLeftOf="@+id/btnDelete" />
 
         <TextView
             android:textColor="#fff"
