--- a/liuyao/src/main/res/layout/hexagram_list_activity.xml
+++ b/liuyao/src/main/res/layout/hexagram_list_activity.xml
@@ -3,7 +3,12 @@
     xmlns:swipe="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    <RelativeLayout
+        android:id="@+id/appx_banner_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true" >
+    </RelativeLayout>
     <com.fortysevendeg.swipelistview.SwipeListView
         android:id="@+id/slv_Hexagram"
         android:listSelector="#00000000"
@@ -20,5 +25,7 @@
         swipe:swipeOffsetLeft="220dp"
         android:focusable="true"
         />
+
+
 
 </LinearLayout>
