增加流年提示

--- a/app/src/main/res/layout/common_viewpager_jiagong.xml
+++ b/app/src/main/res/layout/common_viewpager_jiagong.xml
@@ -87,4 +87,11 @@
             android:background="#CCC" />
 
     </TableLayout>
+    <TextView
+        android:paddingLeft="3pt"
+        android:paddingRight="3pt"
+        android:id="@+id/tv_flowYear_Bad"
+        android:layout_marginTop="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
