--- a/liuyao/src/main/res/values/styles.xml
+++ b/liuyao/src/main/res/values/styles.xml
@@ -53,4 +53,12 @@
         <item name="android:background">#ccc</item>
         <item name="android:textColor">#fff</item>
     </style>
+    <style name="CustomDialog" parent="@android:style/Theme.Holo.Light.Dialog">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:backgroundDimAmount">0.6</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:background">@android:color/background_light</item>
+    </style>
 </resources>
