--- a/liuyao/src/main/res/layout/hexagram_analyze_activity.xml
+++ b/liuyao/src/main/res/layout/hexagram_analyze_activity.xml
@@ -10,15 +10,15 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:orientation="vertical" >
-        <LinearLayout android:orientation="horizontal" android:layout_marginLeft="3dp"
+        <LinearLayout android:orientation="horizontal" android:layout_marginLeft="3dp" android:paddingLeft="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                 android:id="@+id/tvAnalyzeDateTitle"
-                android:text="分析日期: 默认/" />
+                android:text="分析日期: 默认 / " android:textSize="15dp" />
             <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                 android:id="@+id/tvAnalyzeDate"
-                android:text="自选" />
+                android:text="自选" android:textSize="15dp"/>
         </LinearLayout>
 
     <FrameLayout android:id="@+id/fl_Hexagram_Analyzer"
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"/>
 
         <TextView
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:textColor="#fff"
             android:padding="10dp"
             android:text="备注记录"
