--- a/liuyao/src/main/res/layout/common_photo_albums_item.xml
+++ b/liuyao/src/main/res/layout/common_photo_albums_item.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ImageView
         android:id="@+id/lp_img_icon"
@@ -26,4 +26,4 @@
         android:layout_alignParentRight="true"
         android:layout_marginRight="8dp"
         android:layout_centerVertical="true"/>
-</LinearLayout>
+</RelativeLayout>
