--- a/liuyao/src/main/res/menu/menu_main.xml
+++ b/liuyao/src/main/res/menu/menu_main.xml
@@ -6,9 +6,11 @@
         android:showAsAction="always"
         android:actionViewClass="android.widget.SearchView"
         />
-    <item android:id="@+id/menuExportHexagram" android:title="倒出记录"
-        android:showAsAction="always" android:icon="@android:drawable/ic_menu_set_as" />
     <item android:id="@+id/menuAdd" android:title="新增记录"
+        android:orderInCategory="100" android:showAsAction="never" />
+    <item android:id="@+id/menuExportHexagram" android:title="导出记录"
+        android:orderInCategory="100" android:showAsAction="never" />
+    <item android:id="@+id/menuImportHexagram" android:title="导入记录"
         android:orderInCategory="100" android:showAsAction="never" />
     <item android:id="@+id/menuContact" android:title="联系作者"
         android:orderInCategory="100" android:showAsAction="never" />
