增加读取图片功能

--- a/liuyao/src/main/res/values/colors.xml
+++ b/liuyao/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
 
+    <color name="color_for_draw">#3bb021</color>
+
 </resources>
