--- a/mylibrary/src/main/res/layout/common_photo_images_full_size_item.xml
+++ b/mylibrary/src/main/res/layout/common_photo_images_full_size_item.xml
@@ -7,7 +7,8 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content" android:id="@+id/scrollView">
 
-    <lsw.liuyao.SquareImageView android:layout_gravity="top|center_horizontal"
+    <lsw.utility.Image.SquareImageView
+        android:layout_gravity="top|center_horizontal"
         android:id="@+id/lp_img_image"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
