--- a/mylibrary/src/main/res/layout/common_photo_images_item.xml
+++ b/mylibrary/src/main/res/layout/common_photo_images_item.xml
@@ -4,7 +4,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <lsw.liuyao.SquareImageView
+    <lsw.utility.Image.SquareImageView
         android:id="@+id/lp_img_photo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
