--- a/mylibrary/src/main/res/values/color.xml
+++ b/mylibrary/src/main/res/values/color.xml
@@ -7,4 +7,6 @@
     <color name="gray_dark">#333333</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
+
+    <color name="transparent">#00000000</color>
 </resources>
