--- a/mylibrary/src/main/res/layout/common_photo_images.xml
+++ b/mylibrary/src/main/res/layout/common_photo_images.xml
@@ -3,6 +3,23 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <RelativeLayout
+        android:layout_marginBottom="3dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    <TextView android:text="选择图片"
+        android:id="@+id/tvTitle"
+        android:gravity="center"
+        android:textSize="12dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/tvRemoveAll"
+            android:text="X"
+            android:layout_alignParentRight="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:layout_marginRight="5dp" />
+    </RelativeLayout>
     <GridView
         android:id="@+id/gvImages"
         android:layout_width="match_parent"
