--- a/liuyao/src/main/res/layout/menu_left.xml
+++ b/liuyao/src/main/res/layout/menu_left.xml
@@ -2,7 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent" android:background="@color/gray_light">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:orientation="horizontal">
+        <TextView android:text="复 位" android:id="@+id/tvResetImages"
+            android:gravity="center" android:layout_margin="3dp"
+            android:layout_width="match_parent" android:textColor="@color/white"
+            android:layout_height="match_parent"  android:background="@drawable/button_flatten" />
+    </LinearLayout>
     <FrameLayout android:id="@+id/fl_Image_Select"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
 </LinearLayout>
