--- a/mylibrary/src/main/res/layout/common_photo_images.xml
+++ b/mylibrary/src/main/res/layout/common_photo_images.xml
@@ -13,6 +13,9 @@
         android:textSize="12dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+        <View android:layout_width="match_parent" android:layout_below="@id/tvTitle"
+            android:layout_height="1dp"
+            android:background="@color/gray_15"></View>
         <TextView
             android:id="@+id/tvRemoveAll"
             android:text="X"
