--- a/mylibrary/src/main/res/layout/common_photo_images_full_size_item.xml
+++ b/mylibrary/src/main/res/layout/common_photo_images_full_size_item.xml
@@ -30,7 +30,7 @@
             android:layout_height="match_parent"
             android:scaleType="fitXY"/>
 
-        <ImageView
+        <ImageView android:visibility="gone"
             android:id="@+id/lp_img_check_default"
             android:background="@color/gray_light"
             android:layout_width="match_parent"
