--- a/liuyao/src/main/res/layout/menu_left.xml
+++ b/liuyao/src/main/res/layout/menu_left.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent" android:background="@color/gray_light">
     <LinearLayout
@@ -13,5 +13,17 @@
     <FrameLayout android:id="@+id/fl_Image_Select"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:layout_alignParentBottom="true">
+        <TextView
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_margin="3dp"
+            android:layout_height="wrap_content"
+            android:text="价 格"
+            android:textColor="@color/white"
+            android:background="@drawable/button_flatten"/>
+    </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
