--- a/liuyao/src/main/res/layout/future_price_fragment.xml
+++ b/liuyao/src/main/res/layout/future_price_fragment.xml
@@ -12,11 +12,19 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content" />
     <TextView
+        android:id="@+id/tvBeginDate"
         android:background="@drawable/border_bottom"
         android:textSize="18dp"
         android:gravity="center"
-        android:text="2016-4-19 至 2016-5-20"
-        android:layout_weight="3"
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/tvEndDate"
+        android:background="@drawable/border_bottom"
+        android:textSize="18dp"
+        android:gravity="center"
+        android:layout_weight="1"
         android:layout_width="0dp"
         android:layout_height="wrap_content" />
 </LinearLayout>
@@ -24,12 +32,14 @@
         android:padding="3dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <TextView android:textSize="18dp"
+        <TextView
+            android:textSize="18dp"
             android:text="期货代码:"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
         <TextView
+            android:id="@+id/tvFutureCode"
             android:background="@drawable/border_bottom"
             android:textSize="18dp"
             android:gravity="center"
@@ -38,11 +48,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
         <TextView
+            android:id="@+id/tvBtnSearch"
             android:textColor="@color/white"
             android:background="@drawable/button_flatten"
             android:textSize="18dp"
             android:gravity="center"
-            android:text="选择"
+            android:text="查询"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
@@ -61,8 +72,9 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent" />
         <TextView
+            android:id="@+id/tvSummary"
             android:gravity="center"
-            android:text="开:3000 收:3500-----开/收:500 \n高:4000 低2500-----高/低:1500"
+            android:text=""
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </LinearLayout>
