--- a/liuyao/src/main/res/layout/future_price_fragment.xml
+++ b/liuyao/src/main/res/layout/future_price_fragment.xml
@@ -43,22 +43,38 @@
             android:background="@drawable/border_bottom"
             android:textSize="18dp"
             android:gravity="center"
-            android:text="JD1609"
+            android:text=""
             android:layout_weight="2"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/tvBtnSearch"
-            android:textColor="@color/white"
-            android:background="@drawable/button_flatten"
-            android:textSize="18dp"
-            android:gravity="center"
-            android:text="查询"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
 
+    </LinearLayout>
+<LinearLayout android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_marginTop="3dp"
+    android:layout_marginBottom="3dp"
+    android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp">
+    <TextView
+        android:id="@+id/tvBtnSearch"
+        android:textColor="@color/white"
+        android:background="@drawable/button_flatten"
+        android:textSize="15dp"
+        android:gravity="center"
+        android:text="查询网络数据"
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/tvBtnImportData"
+        android:textColor="@color/white"
+        android:background="@drawable/button_flatten"
+        android:textSize="15dp"
+        android:gravity="center"
+        android:text="存储查询数据"
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content" />
+</LinearLayout>
     <LinearLayout
         android:layout_marginLeft="3dp"
         android:layout_marginTop="3dp"
@@ -72,8 +88,9 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent" />
         <TextView
+            android:paddingLeft="15dp"
             android:id="@+id/tvSummary"
-            android:gravity="center"
+            android:gravity="center|left"
             android:text=""
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
