提供截取列表价格功能

--- a/liuyao/src/main/res/layout/menu_left.xml
+++ b/liuyao/src/main/res/layout/menu_left.xml
@@ -10,12 +10,27 @@
             android:layout_width="match_parent" android:textColor="@color/white"
             android:layout_height="match_parent"  android:background="@drawable/button_flatten" />
     </LinearLayout>
-    <FrameLayout android:id="@+id/fl_Image_Select"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentEnd="true"
+    <LinearLayout android:id="@+id/llcontent"
+        android:layout_alignParentEnd="true" android:orientation="vertical"
         android:layout_above="@+id/bottomFunctions"
-        android:layout_below="@+id/topFunctions" />
+        android:layout_below="@+id/topFunctions"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+<HorizontalScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <LinearLayout android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent">
+        <FrameLayout android:id="@+id/fl_Image_Select"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <FrameLayout android:id="@+id/fl_Price_List" android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+</HorizontalScrollView>
+    </LinearLayout>
     <LinearLayout android:id="@+id/bottomFunctions" android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" android:layout_alignParentBottom="true">
