--- a/liuyao/src/main/res/layout/future_price_fragment.xml
+++ b/liuyao/src/main/res/layout/future_price_fragment.xml
@@ -1,105 +1,130 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<LinearLayout
-    android:padding="3dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <TextView android:textSize="18dp"
-        android:text="日期范围:"
-        android:layout_weight="1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/tvBeginDate"
-        android:background="@drawable/border_bottom"
-        android:textSize="18dp"
-        android:gravity="center"
-        android:layout_weight="1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/tvEndDate"
-        android:background="@drawable/border_bottom"
-        android:textSize="18dp"
-        android:gravity="center"
-        android:layout_weight="1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content" />
-</LinearLayout>
-    <LinearLayout
-        android:padding="3dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:textSize="18dp"
-            android:text="期货代码:"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/tvFutureCode"
-            android:background="@drawable/border_bottom"
-            android:textSize="18dp"
-            android:gravity="center"
-            android:text=""
-            android:layout_weight="2"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" />
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
 
-    </LinearLayout>
-<LinearLayout android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_marginTop="3dp"
-    android:layout_marginBottom="3dp"
-    android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp">
-    <TextView
-        android:id="@+id/tvBtnSearch"
-        android:textColor="@color/white"
-        android:background="@drawable/button_flatten"
-        android:textSize="15dp"
-        android:gravity="center"
-        android:text="查询网络数据"
-        android:layout_weight="1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/tvBtnImportData"
-        android:textColor="@color/white"
-        android:background="@drawable/button_flatten"
-        android:textSize="15dp"
-        android:gravity="center"
-        android:text="存储查询数据"
-        android:layout_weight="1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content" />
-</LinearLayout>
     <LinearLayout
-        android:layout_marginLeft="3dp"
-        android:layout_marginTop="3dp"
-        android:layout_marginBottom="3dp"
-        android:orientation="horizontal"
+        android:id="@+id/llcondtion"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:gravity="center"
-            android:text="统计:"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
-        <TextView
-            android:paddingLeft="15dp"
-            android:id="@+id/tvSummary"
-            android:gravity="center|left"
-            android:text=""
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </LinearLayout>
-        <ListView
-            android:id="@+id/lvPrice"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"></ListView>
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="3dp">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="日期范围:"
+                android:textSize="18dp" />
+
+            <TextView
+                android:id="@+id/tvBeginDate"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/border_bottom"
+                android:gravity="center"
+                android:textSize="18dp" />
+
+            <TextView
+                android:id="@+id/tvEndDate"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/border_bottom"
+                android:gravity="center"
+                android:textSize="18dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="3dp">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="期货代码:"
+                android:textSize="18dp" />
+
+            <TextView
+                android:id="@+id/tvFutureCode"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:background="@drawable/border_bottom"
+                android:gravity="center"
+                android:text=""
+                android:textSize="18dp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="3dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="3dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tvBtnSearch"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/button_flatten"
+                android:gravity="center"
+                android:text="查询网络数据"
+                android:textColor="@color/white"
+                android:textSize="15dp" />
+
+            <TextView
+                android:id="@+id/tvBtnImportData"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/button_flatten"
+                android:gravity="center"
+                android:text="存储查询数据"
+                android:textColor="@color/white"
+                android:textSize="15dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="3dp"
+            android:layout_marginLeft="3dp"
+            android:layout_marginTop="3dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="统计:" />
+
+            <TextView
+                android:id="@+id/tvSummary"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center|left"
+                android:paddingLeft="15dp"
+                android:text="" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <ListView
+        android:id="@+id/lvPrice"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></ListView>
 
 
 </LinearLayout>
