--- a/liuyao/src/main/res/layout/future_price_list_item.xml
+++ b/liuyao/src/main/res/layout/future_price_list_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:padding="3dp">
+    android:layout_height="match_parent" android:padding="3dp" android:background="@color/white">
     <TextView android:id="@+id/tvDate"
         android:background="@color/gray_light"
         android:textSize="15dp"
