--- a/liuyao/src/main/res/layout/hexagram_list_menu.xml
+++ b/liuyao/src/main/res/layout/hexagram_list_menu.xml
@@ -2,10 +2,29 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent" android:background="@color/white">
-    <ExpandableListView
+    <ExpandableListView android:layout_weight="1"
         android:id="@+id/lvMenu"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
     </ExpandableListView>
+<LinearLayout
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:paddingTop="10dp"
+    android:layout_weight="2"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <TextView
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:gravity="center"
+        android:textSize="15dp"
+        android:textColor="@color/white"
+        android:background="@drawable/button_flatten"
+        android:id="@+id/tvFuturePriceSearch"
+        android:text="期货品种价格查询"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
+</LinearLayout>
 </LinearLayout>
