--- a/liuyao/src/main/res/layout/future_price_list_item.xml
+++ b/liuyao/src/main/res/layout/future_price_list_item.xml
@@ -13,19 +13,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView android:id="@+id/tvOpenPrice"
-            android:layout_weight="1"
+            android:layout_weight="1.5"
             android:text="开:"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"   />
         <TextView android:id="@+id/tvClosePrice"
-            android:layout_weight="1"
+            android:layout_weight="1.5"
             android:text="收:"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         <TextView android:id="@+id/tvResultOpenClose"
             android:layout_weight="1"
             android:text="差:"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
     <LinearLayout android:orientation="horizontal"
@@ -33,21 +33,21 @@
         android:layout_height="wrap_content">
     <TextView
         android:id="@+id/tvHighestPrice"
-        android:layout_weight="1"
+        android:layout_weight="1.5"
         android:text="高:"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/tvLowestPrice"
-        android:layout_weight="1"
+        android:layout_weight="1.5"
         android:text="低:"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/tvResultHighestLowest"
         android:layout_weight="1"
         android:text="差:"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </LinearLayout>
 </LinearLayout>
