--- a/liuyao/src/main/res/layout/future_price_fragment.xml
+++ b/liuyao/src/main/res/layout/future_price_fragment.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical" android:background="@color/white" >
 
     <LinearLayout
         android:id="@+id/llcondtion"
@@ -19,7 +19,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="日期范围:"
+                android:text="周期范围:"
                 android:textSize="18dp" />
 
             <TextView
